--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .sec-top {
-    background-image: url("../images/stars-banner.jpg");
+    background-image: url("https://adityabarve28.github.io/portfolio/assets/images/stars-banner.jpg");
     background-size: cover; /* Ensures the image covers the entire element */
     background-repeat: no-repeat; /* Prevents the image from repeating */
     background-position: center; /* Centers the image in the element */
