--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,12 +17,25 @@ body {
     align-items: center;
 }
 
+.sec-top::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(23, 23, 23, 0.7); /* White overlay with 50% opacity */
+    backdrop-filter: blur(5px); /* Apply blur to the background */
+    z-index: 0; /* Ensure overlay is behind the content */
+}
+
 .sec-top-title {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
     text-align: center;
     font-size: 48px;
     margin: 0;
+    z-index: 1;
 }
 
 .download-resume-button {
