--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,17 +17,17 @@ body {
     align-items: center;
 }
 
-.sec-top::before {
+/* .sec-top::before {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(23, 23, 23, 0.7); /* White overlay with 50% opacity */
-    backdrop-filter: blur(5px); /* Apply blur to the background */
-    z-index: 0; /* Ensure overlay is behind the content */
-}
+    background: rgba(23, 23, 23, 0.7); White overlay with 50% opacity
+     backdrop-filter: blur(5px); /* Apply blur to the background 
+     z-index: 0; /* Ensure overlay is behind the content 
+} */
 
 .sec-top-title {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
